--- a/config.env
+++ b/config.env
@@ -1,1 +1,2 @@
-PORT = 5000
+PORT = 4999
+MONGO_URI = mongodb+srv://sl7029:iSLqpIF8pGfT2sc8@cluster0.4ngnj0j.mongodb.net/?retryWrites=true&w=majority
